[gd_scene load_steps=43 format=3 uid="uid://d32tym6bcdu7c"]

[ext_resource type="Script" path="res://Game_Scene_Files/GameScene.gd" id="1_7pjje"]
[ext_resource type="Script" path="res://Game_Scene_Files/UI_Builder.gd" id="2_wj4ul"]
[ext_resource type="Script" path="res://World_Generation/NavMesh_Builder.gd" id="4_k22hi"]
[ext_resource type="Shader" path="res://World_Generation/New_Terrain.gdshader" id="5_gdv2b"]
[ext_resource type="Texture2D" uid="uid://cs6n027ca4h1y" path="res://Test_Items/GrassyField1.png" id="6_1hvoe"]
[ext_resource type="Texture2D" uid="uid://drbfk3h3s6x1b" path="res://Test_Items/HeightMap.exr" id="7_ubyyn"]
[ext_resource type="Script" path="res://Actor_Classes/Fort_Spawn.gd" id="8_viuko"]
[ext_resource type="Script" path="res://Actor_Classes/Player.gd" id="9_3h23t"]
[ext_resource type="Script" path="res://Actor_Classes/GameCamera.gd" id="10_jjfcj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_46wwo"]

[sub_resource type="Sky" id="Sky_4kxja"]
sky_material = SubResource("ProceduralSkyMaterial_46wwo")

[sub_resource type="Environment" id="Environment_0xqwl"]
background_mode = 2
sky = SubResource("Sky_4kxja")
ambient_light_color = Color(0.768627, 1, 0.898039, 1)
ambient_light_sky_contribution = 0.37
ambient_light_energy = 0.2
reflected_light_source = 2
tonemap_mode = 2
tonemap_exposure = 1.06
tonemap_white = 6.0
ssao_enabled = true
ssao_light_affect = 0.78
ssil_radius = 8.03
ssil_intensity = 0.08
ssil_sharpness = 0.0
fog_sun_scatter = 0.41
fog_sky_affect = 0.842
volumetric_fog_enabled = true
volumetric_fog_density = 0.0
volumetric_fog_anisotropy = 0.9
volumetric_fog_length = 64.15
adjustment_enabled = true
adjustment_contrast = 1.2
adjustment_saturation = 1.2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_d3i0u"]
exposure_multiplier = 0.717
auto_exposure_scale = 0.25
auto_exposure_speed = 0.01
dof_blur_far_distance = 1000.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_onle8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fbdp7"]

[sub_resource type="Gradient" id="Gradient_cwsep"]
offsets = PackedFloat32Array(0, 0.574194, 0.593548)
colors = PackedColorArray(0, 0, 0, 1, 0.232258, 0.232258, 0.232258, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g6uko"]
gradient = SubResource("Gradient_cwsep")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mb71g"]
gradient = SubResource("Gradient_cwsep")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tausu"]
gradient = SubResource("Gradient_cwsep")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_j83u8"]
offsets = PackedFloat32Array(0, 0.525568, 0.553977)
colors = PackedColorArray(0, 0, 0, 1, 0.00689007, 0.00689007, 0.00689007, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k0fou"]
gradient = SubResource("Gradient_j83u8")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_1xm2h"]
offsets = PackedFloat32Array(0, 0.542614, 0.556818)
colors = PackedColorArray(0.399532, 0.339551, 0.146551, 1, 0.399532, 0.339551, 0.146551, 1, 0.4, 0.341176, 0.145098, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0t47b"]
gradient = SubResource("Gradient_1xm2h")
width = 128
height = 128
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_12c41"]
colors = PackedColorArray(0.8769, 0.632388, 1, 1, 1, 0.54902, 1, 0.247059)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mljiv"]
gradient = SubResource("Gradient_12c41")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e61bh"]
texture = SubResource("GradientTexture2D_mljiv")

[sub_resource type="Theme" id="Theme_ut02k"]
AcceptDialog/styles/panel = null
HSeparator/styles/separator = null
ItemList/styles/panel = null
Panel/styles/panel = SubResource("StyleBoxTexture_e61bh")
PanelContainer/styles/panel = null
PopupDialog/styles/panel = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = null
ScrollContainer/styles/panel = null
TabContainer/styles/panel = null
TooltipPanel/styles/panel = null
Tree/styles/panel = null
VSeparator/styles/separator = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1jxg"]
render_priority = 0
shader = ExtResource("5_gdv2b")
shader_parameter/t_height = 57.0
shader_parameter/u_terrain_normal_basis = Basis(1, 0, 0, 0, 0.94, 0, 0, 0, 1)
shader_parameter/heightmap = ExtResource("7_ubyyn")
shader_parameter/Albedo = ExtResource("6_1hvoe")

[sub_resource type="PlaneMesh" id="PlaneMesh_ssgws"]
material = SubResource("ShaderMaterial_d1jxg")
size = Vector2(1000, 1000)
subdivide_width = 1500
subdivide_depth = 1500

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_01r5d"]
render_priority = -1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x5v2n"]
radius = 2.431
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fjj8m"]
albedo_color = Color(0, 0.290196, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0q7om"]
albedo_color = Color(1, 0, 0.0313726, 1)

[sub_resource type="Gradient" id="Gradient_eofwo"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.572549, 0.713726, 1, 0.368627)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kogvw"]
noise_type = 3
seed = 12
frequency = 0.001

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_p3d2n"]
generate_mipmaps = false
color_ramp = SubResource("Gradient_eofwo")
noise = SubResource("FastNoiseLite_kogvw")

[sub_resource type="BoxShape3D" id="BoxShape3D_rb27j"]

[sub_resource type="Curve" id="Curve_4qrwo"]
_data = [Vector2(0, 0.75), 0.0, 0.0, 0, 0, Vector2(0.448052, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.75), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xo61g"]
curve = SubResource("Curve_4qrwo")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p133b"]
lifetime_randomness = 0.16
emission_shape = 3
emission_box_extents = Vector3(10, 10, 10)
gravity = Vector3(0, 0, 0)
linear_accel_min = -1.0
linear_accel_max = 1.0
scale_min = 14.83
scale_max = 17.73
scale_curve = SubResource("CurveTexture_xo61g")
sub_emitter_mode = 2
sub_emitter_amount_at_end = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y0vbv"]
shading_mode = 2
metallic_specular = 0.0
emission_enabled = true
rim_tint = 0.0
heightmap_scale = 16.0
proximity_fade_distance = 0.0
distance_fade_mode = 2

[sub_resource type="SphereMesh" id="SphereMesh_cyqkr"]
material = SubResource("StandardMaterial3D_y0vbv")

[node name="GameScene" type="Node3D"]
script = ExtResource("1_7pjje")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xqwl")
camera_attributes = SubResource("CameraAttributesPractical_d3i0u")

[node name="UI_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_wj4ul")

[node name="Viewport_Sectons" type="Panel" parent="UI_Node"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.05
anchor_bottom = 1.0
grow_vertical = 2

[node name="RightBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="TopBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.05
grow_vertical = 2

[node name="BottomBar" type="Panel" parent="UI_Node/Viewport_Sectons"]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="Time_Bar" type="Panel" parent="UI_Node"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.214
anchor_bottom = 0.161
grow_horizontal = 0

[node name="Date" type="RichTextLabel" parent="UI_Node/Time_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.469
anchor_top = 0.191
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Day_Cycle_Timer" type="Timer" parent="UI_Node/Time_Bar"]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="Build_Menu" type="Panel" parent="UI_Node"]
material = SubResource("CanvasItemMaterial_onle8")
layout_mode = 0
offset_left = 1030.0
offset_top = 89.0
offset_right = 1230.0
offset_bottom = 510.0

[node name="Building_Buttons" type="MenuButton" parent="UI_Node/Build_Menu"]
material = SubResource("CanvasItemMaterial_fbdp7")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.12
toggle_mode = false
text = "Buildings"
switch_on_hover = true

[node name="Minimap" type="Panel" parent="UI_Node"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.320038

[node name="Snap" type="Button" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.06
anchor_bottom = 0.08
offset_left = -59.0
offset_top = -66.68
offset_right = -2.36
offset_bottom = -11.9856
text = "Snap"
icon = SubResource("GradientTexture2D_g6uko")
flat = true
icon_alignment = 1

[node name="Build_Button" type="Button" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.355
anchor_top = -0.145
anchor_right = 0.355
anchor_bottom = -0.145
offset_left = -102.88
offset_top = -70.3135
offset_right = -30.88
offset_bottom = 1.68646
text = "Build"
icon = SubResource("GradientTexture2D_mb71g")
flat = true
icon_alignment = 1

[node name="Units_Button" type="Button" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57
anchor_top = -0.145
anchor_right = 0.57
offset_left = -41.92
offset_top = -87.3136
offset_right = 31.08
offset_bottom = -46.68
keep_pressed_outside = true
text = "Units"
icon = SubResource("GradientTexture2D_tausu")
flat = true
icon_alignment = 1

[node name="Management_Button" type="Button" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.57
anchor_top = -0.145
anchor_right = 0.57
offset_left = -99.92
offset_top = -93.3136
offset_right = -26.92
offset_bottom = -52.68
keep_pressed_outside = true
text = "Mgmt"
icon = SubResource("GradientTexture2D_tausu")
flat = true
icon_alignment = 1

[node name="ColorRect" type="ColorRect" parent="UI_Node/Minimap"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.589
anchor_top = -0.47
anchor_right = 1.0
anchor_bottom = -0.275
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Pop" type="RichTextLabel" parent="UI_Node/Minimap"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.651
anchor_top = -0.423
anchor_right = 0.948
anchor_bottom = -0.282
text = "Population"
autowrap_mode = 2

[node name="Minimap_Placeholder" type="Sprite2D" parent="UI_Node/Minimap"]
position = Vector2(102, 75.32)
scale = Vector2(2.65039, 2.65039)
texture = SubResource("GradientTexture2D_k0fou")

[node name="Clock_Placeholder" type="Sprite2D" parent="UI_Node/Minimap"]
position = Vector2(-958, -449.68)
scale = Vector2(0.9375, 0.9375)
texture = SubResource("GradientTexture2D_0t47b")

[node name="Res_Bar" type="Panel" parent="UI_Node"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.7
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 0

[node name="Wood" type="RichTextLabel" parent="UI_Node/Res_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.055
anchor_bottom = 0.125
text = "Wood
"

[node name="ColorRect" type="ColorRect" parent="UI_Node/Res_Bar/Wood"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Amount" type="RichTextLabel" parent="UI_Node/Res_Bar/Wood"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
fit_content = true

[node name="Stone" type="RichTextLabel" parent="UI_Node/Res_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.125
anchor_right = 1.0
anchor_bottom = 0.25
offset_top = 4.0
offset_bottom = 4.0
text = "Stone"

[node name="ColorRect" type="ColorRect" parent="UI_Node/Res_Bar/Stone"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Amount" type="RichTextLabel" parent="UI_Node/Res_Bar/Stone"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -0.00705338
fit_content = true

[node name="Riches" type="RichTextLabel" parent="UI_Node/Res_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.375
offset_top = 8.0
offset_bottom = 8.0
text = "Riches"
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="UI_Node/Res_Bar/Riches"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Amount" type="RichTextLabel" parent="UI_Node/Res_Bar/Riches"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.00847244
offset_right = 0.00799561
offset_bottom = 0.00847244
fit_content = true

[node name="Crystal" type="RichTextLabel" parent="UI_Node/Res_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.375
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 12.0
offset_bottom = 12.0
text = "Crystal"
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="UI_Node/Res_Bar/Crystal"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Amount" type="RichTextLabel" parent="UI_Node/Res_Bar/Crystal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
fit_content = true

[node name="Food" type="RichTextLabel" parent="UI_Node/Res_Bar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.625
offset_top = 16.0
offset_right = 12.0
offset_bottom = 16.0
text = "Food"
autowrap_mode = 2

[node name="Amount" type="RichTextLabel" parent="UI_Node/Res_Bar/Food"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
fit_content = true

[node name="ColorRect" type="ColorRect" parent="UI_Node/Res_Bar/Food"]
self_modulate = Color(1, 1, 1, 0.313726)
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Unit_List" type="Panel" parent="UI_Node"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.8
anchor_right = 0.4
anchor_bottom = 0.9
grow_vertical = 0
theme = SubResource("Theme_ut02k")

[node name="World" type="Node3D" parent="."]
script = ExtResource("4_k22hi")
terrain_amplitude = 57

[node name="Visual_Ground" type="MeshInstance3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.122696, 0, 0.132719)
layers = 3
mesh = SubResource("PlaneMesh_ssgws")
skeleton = NodePath("")

[node name="Player_Base_Spawn" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 391.568, 8.68737, -377.605)
script = ExtResource("8_viuko")
group = "reg_0_1"

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Player_Base_Spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0212, 0)
material_override = SubResource("StandardMaterial3D_01r5d")
mesh = SubResource("CapsuleMesh_x5v2n")
surface_material_override/0 = SubResource("StandardMaterial3D_fjj8m")

[node name="Enemy1_Base_Spawn" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 398.4, 1.477, -431.39)
script = ExtResource("8_viuko")
group = "reg_1_0"
actor_id = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Enemy1_Base_Spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.02921, 0)
mesh = SubResource("CapsuleMesh_x5v2n")
surface_material_override/0 = SubResource("StandardMaterial3D_0q7om")

[node name="Player" type="Node" parent="."]
script = ExtResource("9_3h23t")

[node name="Player_camera" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 381.785, 1.52588e-05, -382.236)
script = ExtResource("10_jjfcj")

[node name="Player_view" type="Camera3D" parent="Player/Player_camera"]
transform = Transform3D(1, 0, 0, 0, 0.573577, 0.819152, 0, -0.819152, 0.573577, 0, 27.9176, 15)

[node name="RayCast3D" type="RayCast3D" parent="Player/Player_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)
target_position = Vector3(0, -500, 0)
collision_mask = 32768
hit_from_inside = true

[node name="Selection_square" type="Decal" parent="Player"]
visible = false
size = Vector3(1, 20, 1)
texture_albedo = SubResource("NoiseTexture2D_p3d2n")

[node name="Selection_Square_Box" type="Area3D" parent="Player/Selection_square"]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/Selection_square/Selection_Square_Box"]
shape = SubResource("BoxShape3D_rb27j")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(6.03666e-09, 0.990418, -0.138102, -4.32925e-08, 0.138102, 0.990418, 1, -4.44089e-14, 4.37114e-08, 0, 0, 0)
shadow_enabled = true
shadow_blur = 2.275
directional_shadow_max_distance = 800.0
directional_shadow_pancake_size = 76.6

[node name="Moon" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
visible = false
light_color = Color(0.745098, 1, 1, 1)
light_energy = 0.427
light_indirect_energy = 0.819
shadow_enabled = true
shadow_blur = 7.224
directional_shadow_mode = 1
directional_shadow_blend_splits = true
directional_shadow_max_distance = 800.0
directional_shadow_pancake_size = 76.6
sky_mode = 1

[node name="Fog_Of_War" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 482.721, 6.43969, -485.748)
amount = 23
lifetime = 7.0
randomness = 0.44
visibility_aabb = AABB(-12.7014, -46.3993, -10.8425, 25.4027, 92.7985, 21.685)
process_material = SubResource("ParticleProcessMaterial_p133b")
draw_pass_1 = SubResource("SphereMesh_cyqkr")

[connection signal="menu_opened" from="UI_Node" to="." method="_on_ui_node_menu_opened"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/LeftBar" to="Player/Player_camera" method="_on_left_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/LeftBar" to="Player/Player_camera" method="_on_left_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/RightBar" to="Player/Player_camera" method="_on_right_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/RightBar" to="Player/Player_camera" method="_on_right_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/TopBar" to="Player/Player_camera" method="_on_top_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/TopBar" to="Player/Player_camera" method="_on_top_bar_mouse_exited"]
[connection signal="mouse_entered" from="UI_Node/Viewport_Sectons/BottomBar" to="Player/Player_camera" method="_on_bottom_bar_mouse_entered"]
[connection signal="mouse_exited" from="UI_Node/Viewport_Sectons/BottomBar" to="Player/Player_camera" method="_on_bottom_bar_mouse_exited"]
[connection signal="timeout" from="UI_Node/Time_Bar/Day_Cycle_Timer" to="." method="_on_day_cycle_timer_timeout"]
[connection signal="timeout" from="UI_Node/Time_Bar/Day_Cycle_Timer" to="UI_Node" method="_on_timer_timeout"]
[connection signal="pressed" from="UI_Node/Minimap/Snap" to="UI_Node" method="_on_snap_pressed"]
[connection signal="pressed" from="UI_Node/Minimap/Build_Button" to="UI_Node" method="_on_build_button_pressed"]
[connection signal="pressed" from="UI_Node/Minimap/Units_Button" to="UI_Node" method="_on_units_button_pressed"]
